--- a/references.bib
+++ b/references.bib
@@ -3302,6 +3302,58 @@
   publisher={Springer}
 }
 
+@article{self2018,
+  title={Observation-level and parametric interaction for high-dimensional data analysis},
+  author={Self, Jessica Zeitz and Dowling, Michelle and Wenskovitch, John and Crandell, Ian and Wang, Ming and House, Leanna and Leman, Scotland and North, Chris},
+  journal={ACM Transactions on Interactive Intelligent Systems (TiiS)},
+  volume={8},
+  number={2},
+  pages={1--36},
+  year={2018},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{rosling2011,
+  title={Health advocacy with Gapminder animated statistics},
+  author={Rosling, Hans and Zhang, Zhongxing},
+  journal={Journal of epidemiology and global health},
+  volume={1},
+  number={1},
+  pages={11--14},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@inproceedings{buja1986,
+  title={Grand tour methods: an outline},
+  author={Buja, Andreas and Asimov, Daniel},
+  booktitle={Proceedings of the Seventeenth Symposium on the interface of computer sciences and statistics on Computer science and statistics},
+  pages={63--67},
+  year={1986}
+}
+
+
+@article{asimov1985,
+  title={The grand tour: a tool for viewing multidimensional data},
+  author={Asimov, Daniel},
+  journal={SIAM journal on scientific and statistical computing},
+  volume={6},
+  number={1},
+  pages={128--143},
+  year={1985},
+  publisher={SIAM}
+}
+
+
+@article{chen2008,
+  title={Grand tours, projection pursuit guided tours, and manual controls},
+  author={Chen, Chun-houh and H{\"a}rdle, Wolfgang and Unwin, Antony and Cook, Dianne and Buja, Andreas and Lee, Eun-Kyung and Wickham, Hadley},
+  journal={Handbook of data visualization},
+  pages={295--314},
+  year={2008},
+  publisher={Springer}
+}
+
 
   @article{cook1995,
   title={Grand tour and projection pursuit},
@@ -3632,6 +3684,16 @@
   year		= {2018},
   publisher	= {The Open Journal}
 }
+
+@article{xie2014,
+  title={Reactive programming for interactive graphics},
+  author={Xie, Yihui and Hofmann, Heike and Cheng, Xiaoyue},
+  journal={Statistical Science},
+  pages={201--213},
+  year={2014},
+  publisher={JSTOR}
+}
+
 
 @Article{	  vanderplas2020,
   title		= {Testing Statistical Charts: What makes a good graph?},
